# tmux-pane-mover

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tmux_pane_mover/: __init__.py  __main__.py  app.py
