[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmux-pane-mover"
dynamic = ["version"]
description = "Drag-and-drop TUI for rearranging tmux panes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tzafrir Rehan", email = "tzafrir.r@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.40",
]

[project.scripts]
tmux-pane-mover = "tmux_pane_mover.__main__:main"

[project.urls]
Homepage = "https://github.com/tzafrir/tmux-pane-mover"
Repository = "https://github.com/tzafrir/tmux-pane-mover"
Issues = "https://github.com/tzafrir/tmux-pane-mover/issues"

[tool.hatch.version]
path = "src/tmux_pane_mover/__init__.py"
